--- a/backend/package.json
+++ b/backend/package.json
@@ -58,6 +58,7 @@
     "nodemailer": "^6.7.2",
     "ps-node": "^0.1.6",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^4.4.0",
     "speakingurl": "^14.0.1"
   }
 }
