--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "rxjs": "~7.4.0",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
