--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.1.0",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
+    "postman-collection": "^4.1.1",
     "rxjs": "~7.4.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
