--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "rxjs": "~7.4.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
