--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "live-server": "^1.2.1",
     "mongoose": "^6.1.6",
     "socket.io": "^4.4.1",
     "uuidv4": "^6.2.12",
