--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -21,7 +21,10 @@
     "@angular/router": "~13.1.0",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
+    "keen-slider": "^6.6.3",
     "postman-collection": "^4.1.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.1.1",
     "rxjs": "~7.4.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
