--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "dependencies": {
     "@socket.io/admin-ui": "^0.2.0",
-    "express": "^4.17.2"
+    "cors": "^2.8.5",
+    "del": "^6.0.0",
+    "express": "^4.17.2",
+    "lokijs": "^1.5.12",
+    "multer": "^1.4.4"
+  },
+  "devDependencies": {
+    "@types/del": "^4.0.0",
+    "@types/express": "^4.17.13",
+    "@types/lokijs": "^1.5.7",
+    "@types/multer": "^1.4.7",
+    "typescript": "^4.5.5"
   }
 }
